Point density crash #47615

Closed
opened 2016-02-28 15:41:50 +01:00 by Alexey · 5 comments

System Information
windows7 64
ASUS ATI Radeon HD6870
Version
Broken: (all include last version)
Worked: (none)

Short description of error
1.png
Exact steps for others to reproduce the error
open, render(or select rendered shading mode) - crash
point_dencity.blend

System Information windows7 64 ASUS ATI Radeon HD6870 Version Broken: (all include last version) Worked: (none) **Short description of error** ![1.png](https://archive.blender.org/developer/F286296/1.png) **Exact steps for others to reproduce the error** open, render(or select rendered shading mode) - crash [point_dencity.blend](https://archive.blender.org/developer/F286298/point_dencity.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Aaron Carlisle changed title from Point dencity crarh to Point density crash 2016-02-28 16:04:24 +01:00

This issue was referenced by 42fe1ba844

This issue was referenced by 42fe1ba84462395b4a0aea4403b5a4d7ff08530f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

select camera for this node - we will have crash
point_dencity.blend

select camera for this node - we will have crash [point_dencity.blend](https://archive.blender.org/developer/F286425/point_dencity.blend)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47615
No description provided.