Fix T47615: crash trying to use point density with lamp object.